set default java env